--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				>
 			</div>
 			<div>
-				<img id="poster" src="images/ExploreCSR_Final_Poster.png" />
+				<img id="poster" src="images/poster.png" />
 			</div>
 		</div>
 	</main>
