--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
 <body>
 	<div id="navigation">
-		<a href="index.html"><img id="home-logo" src="images/logo-blackbg.png" /></a>
+		<a href="index.html"><img id="home-logo" src="images/exploreCS_Logo.png" /></a>
 		<div id="nav-hamburger" onclick="onClickNavButton()">MENU</div>
 		<div id="nav-container">
 			<a href="index.html" class="nav-item">HOME</a>
@@ -44,6 +44,7 @@
 			<div class="teams">기획팀</div>
 			<div class="member">박정언 (전산학부 석사과정)</div>
 			<div class="member">최류해랑 (전기및전자공학부 박사과정)</div>
+			<div class="member">이지현 (전산학부 박사과정)</div>
 			<div class="member">김윤수 (AI대학원 석사과정)</div>
 			<div class="member">이진우 (전산학부 학사과정)</div>
 			<div class="member">조규상 (전기및전자공학부 박사과정)</div>
