--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 	<div id="navigation">
-		<a href="index.html"><img id="home-logo" src="images/logo-blackbg.png" /></a>
+		<a href="index.html"><img id="home-logo" src="images/exploreCS_Logo.png" /></a>
 		<div id="nav-hamburger" onclick="onClickNavButton()">MENU</div>
 		<div id="nav-container">
 			<a href="index.html" class="nav-item">HOME</a>
@@ -38,7 +38,7 @@
 					KAIST N1 201호
 				</h4>
 				<a
-					href="https://docs.google.com/forms/d/e/1FAIpQLSfsxDx7DHjMn0LiwJmzTZGgYs57cMsoDGLiiD-I-JLkEVSkqA/viewform"
+					href="https://docs.google.com/forms/d/e/1FAIpQLScatBRpAGsHs2U9Igsha6kK9QsKiaY7OKEVE6wNf9Rle_jeFQ/viewform"
 					target="blank"
 					><button class="button-white">참가 신청하러 가기</button></a
 				>
@@ -58,7 +58,7 @@
 					박사 학위를 취득한 자)을 패널로 모셔서, 본인의 연구를 후배 연구자들 및 교수님들께 소개하고
 					피드백을 받는 행사입니다.
 					<br /><br />
-					올해는 여덟 분의 EE/CS/AI 분야의 Rising Star 분들을 모셔서, 연구 내용과 연구 과정에 대한
+					올해는 여덟 분의 AI/CS/EE 분야의 Rising Star 분들을 모셔서, 연구 내용과 연구 과정에 대한
 					발표를 진행해 주실 예정입니다. 연구자로서의 삶에 강연과 더불어, 여러 가지 다양한 최신 연구
 					동향에 대한 이야기를 들을 수 있는 기회이니, 우리나라의 AI/CS/EE 분야를 이끌어갈 학부생 및
 					대학원생들의 많은 관심과 참석 부탁드립니다!
@@ -73,11 +73,14 @@
 					</ul>
 					<br />
 
+					※ 행사 수용 인원이 제한되어 있는 관계로, 선착순 사전 신청자(85명)에 한해 행사 참여가
+					가능합니다.
+					<br /><br />
 					본 행사는 Google exploreCSR의 지원을 받아 기획되었습니다.
 				</div>
 
 				<a
-					href="https://docs.google.com/forms/d/e/1FAIpQLSfsxDx7DHjMn0LiwJmzTZGgYs57cMsoDGLiiD-I-JLkEVSkqA/viewform"
+					href="https://docs.google.com/forms/d/e/1FAIpQLScatBRpAGsHs2U9Igsha6kK9QsKiaY7OKEVE6wNf9Rle_jeFQ/viewform"
 					target="blank"
 					><button class="button-dark" id="main-button">참가 신청하러 가기</button></a
 				>
