--- a/past.html
+++ b/past.html
@@ -17,7 +17,7 @@
 
 <body>
 	<div id="navigation">
-		<a href="index.html"><img id="home-logo" src="images/logo-whitebg.png" /></a>
+		<a href="index.html"><img id="home-logo" src="images/exploreCS_Logo.png" /></a>
 		<div id="nav-hamburger" onclick="onClickNavButton()">MENU</div>
 		<div id="nav-container">
 			<a href="index.html" class="nav-item">HOME</a>
