--- a/schedule.html
+++ b/schedule.html
@@ -17,7 +17,7 @@
 
 <body>
 	<div id="navigation">
-		<a href="index.html"><img id="home-logo" src="images/logo-blackbg.png" /></a>
+		<a href="index.html"><img id="home-logo" src="images/exploreCS_Logo.png" /></a>
 		<div id="nav-hamburger" onclick="onClickNavButton()">MENU</div>
 		<div id="nav-container">
 			<a href="index.html" class="nav-item">HOME</a>
@@ -50,7 +50,7 @@
 						<div class="presenter-name">오혜연</div>
 						<div class="presenter-affil">KAIST 전산학부 교수</div>
 					</div>
-					<div class="p-title">연구자로써 어떻게 살 것인가?</div>
+					<div class="p-title">연구자로서 어떻게 살 것인가?</div>
 				</div>
 			</div>
 			<div class="time">
