--- a/schedule.html
+++ b/schedule.html
@@ -92,7 +92,7 @@
 							<div class="presenter-name">김동휘</div>
 							<div class="presenter-affil">KAIST 박사과정</div>
 						</div>
-						<div class="p-title">How to save Android from compatibility crashes</div>
+						<div class="p-title">How to Save Android from Compatibility Crashes</div>
 					</div>
 				</div>
 			</div>
@@ -137,7 +137,7 @@
 							<div class="presenter-affil">데이터사이언스그룹 선임연구원</div>
 						</div>
 						<div class="p-title">
-							Understanding users' chatbot misuses and health-related conversations in chatbot data
+							Understanding Users' Chatbot Misuses and Health-related Conversations in Chatbot Data
 						</div>
 					</div>
 				</div>
