--- a/schedule.html
+++ b/schedule.html
@@ -90,7 +90,7 @@
 					<div class="session-presentation">
 						<div class="presenter">
 							<div class="presenter-name">김동휘</div>
-							<div class="presenter-affil">KAIST 박사과정</div>
+							<div class="presenter-affil">KAIST 박사</div>
 						</div>
 						<div class="p-title">How to Save Android from Compatibility Crashes</div>
 					</div>
