--- a/schedule.html
+++ b/schedule.html
@@ -75,6 +75,7 @@
 						<div class="presenter">
 							<div class="presenter-name">정소영</div>
 							<div class="presenter-affil">KAIST 박사과정</div>
+							<div class="presenter-research">2:00-2:25</div>
 						</div>
 						<div class="p-title">프리폼 유기전자소자의 신뢰성 향상</div>
 					</div>
@@ -82,6 +83,7 @@
 						<div class="presenter">
 							<div class="presenter-name">신혜인</div>
 							<div class="presenter-affil">KAIST 박사</div>
+							<div class="presenter-research">2:25-2:50</div>
 						</div>
 						<div class="p-title">
 							A Framework for Mitigating Non-idealities of ReRAM-based DNN Accelerators
@@ -91,6 +93,7 @@
 						<div class="presenter">
 							<div class="presenter-name">김동휘</div>
 							<div class="presenter-affil">KAIST 박사</div>
+							<div class="presenter-research">2:50-3:15</div>
 						</div>
 						<div class="p-title">How to Save Android from Compatibility Crashes</div>
 					</div>
@@ -119,6 +122,7 @@
 						<div class="presenter">
 							<div class="presenter-name">공태식</div>
 							<div class="presenter-affil">KAIST 박사</div>
+							<div class="presenter-research">3:25-3:50</div>
 						</div>
 						<div class="p-title">
 							모바일 센싱의 도메인 변화 문제와 테스트타임 적응을 통한 해결 방안
@@ -128,6 +132,7 @@
 						<div class="presenter">
 							<div class="presenter-name">서영교</div>
 							<div class="presenter-affil">KAIST 박사과정</div>
+							<div class="presenter-research">3:50-4:15</div>
 						</div>
 						<div class="p-title">Representation Learning for Visual Control with World Models</div>
 					</div>
@@ -135,6 +140,7 @@
 						<div class="presenter">
 							<div class="presenter-name">진효진</div>
 							<div class="presenter-affil">데이터사이언스그룹 선임연구원</div>
+							<div class="presenter-research">4:15-4:40</div>
 						</div>
 						<div class="p-title">
 							Understanding Users' Chatbot Misuses and Health-related Conversations in Chatbot Data
@@ -159,6 +165,7 @@
 					<div class="presenter">
 						<div class="presenter-name">이하연</div>
 						<div class="presenter-affil">KAIST 박사과정</div>
+						<div class="presenter-research">4:50-5:15</div>
 					</div>
 					<div class="p-title">졸업 전 박사과정이 알려주는 미리 알았더라면 좋았을 것들</div>
 				</div>
@@ -166,7 +173,8 @@
 				<div class="tutorial-presentation">
 					<div class="presenter">
 						<div class="presenter-name">이지민</div>
-						<div class="presenter-affil">UNIST 교수</div>
+						<div class="presenter-affil">UNIST 원자력공학과 교수</div>
+						<div class="presenter-research">5:15-5:40</div>
 					</div>
 					<div class="p-title">연구실 셋업: Zero to One!</div>
 				</div>
