--- a/schedule.html
+++ b/schedule.html
@@ -11,7 +11,7 @@
 		rel="stylesheet" />
 	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-	<meta name="description" content="Rising Stars 2022" />
+	<meta name="description" content="Rising Stars 2023" />
 	<link href="style.css" type="text/css" rel="stylesheet" />
 </head>
 
@@ -125,7 +125,7 @@
 							<div class="presenter-research">3:25-3:50</div>
 						</div>
 						<div class="p-title">
-							모바일 센싱의 도메인 변화 문제와 테스트타임 적응을 통한 해결 방안
+							Practical Solutions to Overcome Domain Shift in Mobile Sensing
 						</div>
 					</div>
 					<div class="session-presentation">
